// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> Spec Snapshots should render a filled and disabled input 1`] = `
.c0 {
  position: relative;
  width: 100%;
  display: flex;
  flex-flow: row;
}

.c2 {
  width: inherit;
  height: inherit;
  background: #eceaf1;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 14px;
  font-weight: 400;
  line-height: 17px;
  border-radius: 6px;
  box-sizing: border-box;
  appearance: none;
  padding: 4.5px 8px 4.5px 8px;
  padding-left: 8px;
  outline: none;
  color: #332c3a;
  border: 2px solid #d8d6db;
  background: #ffffff;
  opacity: 0.5;
}

.c2::placeholder {
  color: #727683;
}

.c2:hover {
  background: #d8d6db;
}

.c2:focus {
  border: 2px solid #94a2ff;
  background: #ffffff;
}

.c2:hover {
  background: #ffffff;
}

.c1 {
  position: absolute;
  display: flex;
  flex-flow: column;
  top: 0;
  bottom: 0;
  left: 5px;
  justify-content: center;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    />
    <input
      aria-invalid="false"
      class="c2"
      disabled=""
      id="id"
      name=""
      type="text"
      value="Test"
    />
  </div>
</div>
`;

exports[`<Checkbox /> Spec Snapshots should render an empty and disabled input 1`] = `
.c0 {
  position: relative;
  width: 100%;
  display: flex;
  flex-flow: row;
}

.c2 {
  width: inherit;
  height: inherit;
  background: #eceaf1;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 14px;
  font-weight: 400;
  line-height: 17px;
  border-radius: 6px;
  box-sizing: border-box;
  appearance: none;
  padding: 4.5px 8px 4.5px 8px;
  padding-left: 8px;
  outline: none;
  color: #332c3a;
  border: 2px solid #d8d6db;
  background: #ffffff;
  opacity: 0.5;
}

.c2::placeholder {
  color: #727683;
}

.c2:hover {
  background: #d8d6db;
}

.c2:focus {
  border: 2px solid #94a2ff;
  background: #ffffff;
}

.c2:hover {
  background: #ffffff;
}

.c1 {
  position: absolute;
  display: flex;
  flex-flow: column;
  top: 0;
  bottom: 0;
  left: 5px;
  justify-content: center;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    />
    <input
      aria-invalid="false"
      class="c2"
      disabled=""
      id="id"
      name=""
      placeholder="Placeholder"
      type="text"
    />
  </div>
</div>
`;

exports[`<Checkbox /> Spec Snapshots should render an input of type email 1`] = `
.c2 {
  width: 16px;
  height: 16px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c0 {
  position: relative;
  width: 100%;
  display: flex;
  flex-flow: row;
}

.c3 {
  width: inherit;
  height: inherit;
  background: #eceaf1;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 14px;
  font-weight: 400;
  line-height: 17px;
  border-radius: 6px;
  box-sizing: border-box;
  appearance: none;
  padding: 4.5px 8px 4.5px 8px;
  padding-left: 25px;
  outline: none;
  color: #332c3a;
  border: 2px solid transparent;
}

.c3::placeholder {
  color: #727683;
}

.c3:hover {
  background: #d8d6db;
}

.c3:focus {
  border: 2px solid #94a2ff;
  background: #ffffff;
}

.c1 {
  position: absolute;
  display: flex;
  flex-flow: column;
  top: 0;
  bottom: 0;
  left: 5px;
  justify-content: center;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          color="#8d919b"
          height="16"
          name="CheckmarkBox"
          preserveaspectratio="none"
          viewbox="0 0 16 16"
          width="16"
        />
      </div>
    </div>
    <input
      aria-invalid="false"
      class="c3"
      id="id"
      name=""
      type="email"
      value="hello@gmail.com"
    />
  </div>
</div>
`;

exports[`<Checkbox /> Spec Snapshots should render an input of type number 1`] = `
.c2 {
  width: 16px;
  height: 16px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c0 {
  position: relative;
  width: 100%;
  display: flex;
  flex-flow: row;
}

.c3 {
  width: inherit;
  height: inherit;
  background: #eceaf1;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 14px;
  font-weight: 400;
  line-height: 17px;
  border-radius: 6px;
  box-sizing: border-box;
  appearance: none;
  padding: 4.5px 8px 4.5px 8px;
  padding-left: 25px;
  outline: none;
  color: #332c3a;
  border: 2px solid transparent;
}

.c3::placeholder {
  color: #727683;
}

.c3:hover {
  background: #d8d6db;
}

.c3:focus {
  border: 2px solid #94a2ff;
  background: #ffffff;
}

.c1 {
  position: absolute;
  display: flex;
  flex-flow: column;
  top: 0;
  bottom: 0;
  left: 5px;
  justify-content: center;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          color="#8d919b"
          height="16"
          name="CheckmarkBox"
          preserveaspectratio="none"
          viewbox="0 0 16 16"
          width="16"
        />
      </div>
    </div>
    <input
      aria-invalid="false"
      class="c3"
      id="id"
      name=""
      type="number"
      value="3"
    />
  </div>
</div>
`;

exports[`<Checkbox /> Spec Snapshots should render an input with an error 1`] = `
.c0 {
  position: relative;
  width: 100%;
  display: flex;
  flex-flow: row;
}

.c2 {
  width: inherit;
  height: inherit;
  background: #eceaf1;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 14px;
  font-weight: 400;
  line-height: 17px;
  border-radius: 6px;
  box-sizing: border-box;
  appearance: none;
  padding: 4.5px 8px 4.5px 8px;
  padding-left: 8px;
  outline: none;
  color: #332c3a;
  background: #ffe7e6;
  border: 2px solid transparent;
}

.c2::placeholder {
  color: #727683;
}

.c2:hover {
  background: #d8d6db;
}

.c2:focus {
  border: 2px solid #94a2ff;
  background: #ffffff;
}

.c2:hover {
  background: #fdcac3;
}

.c2:focus {
  border: 2px solid #ff7c75;
  background: #ffffff;
}

.c1 {
  position: absolute;
  display: flex;
  flex-flow: column;
  top: 0;
  bottom: 0;
  left: 5px;
  justify-content: center;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    />
    <input
      aria-invalid="true"
      class="c2"
      id="id"
      name=""
      type="text"
      value="Test"
    />
  </div>
</div>
`;

exports[`<Checkbox /> Spec Snapshots should render an input with an icon 1`] = `
.c2 {
  width: 16px;
  height: 16px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c0 {
  position: relative;
  width: 100%;
  display: flex;
  flex-flow: row;
}

.c3 {
  width: inherit;
  height: inherit;
  background: #eceaf1;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 14px;
  font-weight: 400;
  line-height: 17px;
  border-radius: 6px;
  box-sizing: border-box;
  appearance: none;
  padding: 4.5px 8px 4.5px 8px;
  padding-left: 25px;
  outline: none;
  color: #332c3a;
  border: 2px solid transparent;
}

.c3::placeholder {
  color: #727683;
}

.c3:hover {
  background: #d8d6db;
}

.c3:focus {
  border: 2px solid #94a2ff;
  background: #ffffff;
}

.c1 {
  position: absolute;
  display: flex;
  flex-flow: column;
  top: 0;
  bottom: 0;
  left: 5px;
  justify-content: center;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          color="#8d919b"
          height="16"
          name="CheckmarkBox"
          preserveaspectratio="none"
          viewbox="0 0 16 16"
          width="16"
        />
      </div>
    </div>
    <input
      aria-invalid="false"
      class="c3"
      id="id"
      name=""
      type="text"
      value="Test"
    />
  </div>
</div>
`;
